--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,15 @@
-cffi==1.5.2
-cryptography==1.3
-cycler==0.10.0
+arrow==0.7.0
+beautifulsoup4==4.4.1
+disqus==0.0.4
 Django==1.9.5
-enum34==1.1.2
-idna==2.1
-ipaddress==1.0.16
-lxml==3.4.4
-MathLab==1.0.0
-matplotlib==1.5.1
-MySQL-python==1.2.3rc1
-numpy==1.10.4
-oauthlib==1.0.3
-pandas==0.18.0
-pandas-datareader==0.2.1
-prettytable==0.7.2
-pyasn1==0.1.9
-pycparser==2.14
-pygame==1.9.1
-pyOpenSSL==16.0.0
-pyparsing==2.1.0
-python-dateutil==2.5.0
-pytz==2016.1
+django-emoticons==1.1.2
+django-forms-bootstrap==3.0.1
+django-paypal==0.2.7
+django-tinymce==2.2.0
+gunicorn==19.4.5
+paypal==1.2.5
+Pillow==3.1.1
+python-dateutil==2.4.2
 requests==2.9.1
-requests-file==1.4
-requests-oauthlib==0.6.1
-Scrapy==0.16.4
 six==1.10.0
-tweepy==3.5.0
-Twisted==16.0.0
-virtualenv==14.0.6
-w3lib==1.13.0
-zope.interface==4.1.3
+stripe==1.32.0
