--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,3 @@
-arrow==0.7.0
-beautifulsoup4==4.4.1
-disqus==0.0.4
 Django==1.9.5
-django-emoticons==1.1.2
-django-forms-bootstrap==3.0.1
-django-paypal==0.2.7
-django-tinymce==2.2.0
 gunicorn==19.4.5
-paypal==1.2.5
-Pillow==3.1.1
-python-dateutil==2.4.2
-requests==2.9.1
-six==1.10.0
-stripe==1.32.0
+wheel==0.24.0
